--- a/Xamarin.Forms.TikTok/App.xaml
+++ b/Xamarin.Forms.TikTok/App.xaml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:Xamarin.Forms.TikTok.Converters;assembly=Xamarin.Forms.TikTok"
              x:Class="Xamarin.Forms.TikTok.App">
     <Application.Resources>
 
 
         <x:String x:Key="TikTokFont">TikTokFont</x:String>
+
+        <converters:InvertedBoolConverter x:Key="InvertedBoolConverter"/>
     </Application.Resources>
 </Application>
