--- a/Xamarin.Forms.TikTok/Views/HomeView.xaml
+++ b/Xamarin.Forms.TikTok/Views/HomeView.xaml
@@ -57,7 +57,7 @@
                              HeightRequest="80"
                              HorizontalOptions="Center"
                              RepeatMode="Infinite"/>
-        
+
         <!-- T I T L E -->
         <Grid ColumnDefinitions="Auto, *, Auto"
               InputTransparent="True"
@@ -103,8 +103,23 @@
                      Spacing="20"
                      HorizontalOptions="End"
                      VerticalOptions="End"
-                     Margin="0,0,30,50"
+                     Margin="0,0,10,50"
                      x:DataType="viewModels:HomeViewModel">
+
+            <StackLayout>        
+                <Image Source="profileImage.jpeg"
+                       WidthRequest="50"   
+                       HeightRequest="50"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Center">
+                    <Image.Clip>
+                        <EllipseGeometry
+                            Center="25,25"
+                            RadiusX="25"
+                            RadiusY="25"/>
+                    </Image.Clip>
+                </Image>
+            </StackLayout>
 
             <StackLayout Orientation="Vertical"
                          Spacing="6">
@@ -135,7 +150,7 @@
         <!-- B O T T O M -->
         <Grid ColumnDefinitions="*, Auto"
               VerticalOptions="End"
-              Margin="20,0,20,10"
+              Margin="20,0,10,10"
               Grid.Row="1">
 
             <StackLayout Orientation="Vertical"
