--- a/Xamarin.Forms.TikTok/HomeViewVideoControl.xaml
+++ b/Xamarin.Forms.TikTok/HomeViewVideoControl.xaml
@@ -1,16 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-             xmlns:models="clr-namespace:Xamarin.Forms.TikTok.Models;assembly=Xamarin.Forms.TikTok"
              x:Class="Xamarin.Forms.TikTok.HomeViewVideoControl">
-    <Grid>
-        
-        <xct:MediaElement Source="{Binding VideoUrl}" 
-                          AutoPlay="False"
-                          Aspect="AspectFill" 
-                          KeepScreenOn="True" 
-                          x:DataType="models:TikTokItem"
-                          ShowsPlaybackControls="False" />
-    </Grid>
+    <Grid x:Name="Container"/>
 </ContentView>
