--- a/Xamarin.Forms.TikTok/Views/RecordView.xaml
+++ b/Xamarin.Forms.TikTok/Views/RecordView.xaml
@@ -2,6 +2,6 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Xamarin.Forms.TikTok.Views.RecordView"
-             BackgroundColor="Brown">
-    
+             BackgroundColor="Black">
+    <Grid/>
 </ContentPage>
