--- a/Xamarin.Forms.TikTok/Views/InboxView.xaml
+++ b/Xamarin.Forms.TikTok/Views/InboxView.xaml
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:TypeArguments="viewModels:InboxViewModel"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:viewModels="clr-namespace:Xamarin.Forms.TikTok.Core.ViewModels;assembly=Xamarin.Forms.TikTok.Core"
              x:Class="Xamarin.Forms.TikTok.Views.InboxView"
-             BackgroundColor="Pink">
+             BackgroundColor="Pink"
+             IconImageSource="ic_inbox.png" 
+             Title="Inbox">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
@@ -10,4 +15,4 @@
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
